# GOR

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: gor.hpp
test/: CMakeLists.txt  main.cpp
test/tests/: sompleTest.cpp  tests.cpp
